2 email kafka ok

--- a/roombooking-email/src/main/resources/templates/bookingReminderEmail.html
+++ b/roombooking-email/src/main/resources/templates/bookingReminderEmail.html
@@ -8,7 +8,7 @@
     Hi, <span style="font-weight: bold" th:text="${name}"></span>,
     <p>This is a curtsy reminder of your booking for tomorrow.</p>
     <p>Please get prepared for your following booking</p>
-    <div style='background-color: rgb(255, 255, 245); border-left: 4px solid cadetblue; padding: 8px 16px'>
+    <div style='background-color: rgb(177,205,246); border-left: 4px solid cadetblue; padding: 8px 16px'>
         Room: <span style='font-weight: bold' th:text="${roomTitle}"></span>
         <p>Total booking of <span style='font-weight: bold' th:text="${hours}"></span> hours starting from <span style='font-weight: bold' th:text="${startTime}"></span></p>
     </div>
