--- a/roombooking-email/src/main/resources/templates/bookingNotificationEmail.html
+++ b/roombooking-email/src/main/resources/templates/bookingNotificationEmail.html
@@ -8,7 +8,7 @@
     Hi, <span th:text="${name}" style="font-weight: bold"></span>,
     <p>Thank you for booking on TheBreak!</p>
     <p>Your booking for</p>
-    <div style='background-color: rgb(255, 255, 245); border-left: 4px solid cadetblue; padding: 8px 16px'>
+    <div style='background-color: rgb(178,211,253); border-left: 4px solid #5f9ea0; padding: 8px 16px'>
         Room: <span style='font-weight: bold' th:text="${roomTitle}"></span>
         <p>Total booking of <span style='font-weight: bold' th:text="${totalHours}"></span> hours starting from <span style='font-weight: bold' th:text="${startTime}"></span></p>
         <p>Total cost of <span style='font-weight: bold; color: coral'>$<span th:text="${amount}"></span></span></p>
