--- a/roombooking-email/src/main/resources/templates/bookingNotificationEmail.html
+++ b/roombooking-email/src/main/resources/templates/bookingNotificationEmail.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <title>Booking Notification</title>
 </head>
-<body>
+<body style="line-height: 22px;">
     Hi, <span th:text="${name}" style="font-weight: bold"></span>,
-    <p>Thank you for booking on TheBreak!</p>
-    <p>Your booking for</p>
-    <div style='background-color: rgb(178,211,253); border-left: 4px solid #5f9ea0; padding: 8px 16px'>
-        Room: <span style='font-weight: bold' th:text="${roomTitle}"></span>
-        <p>Total booking of <span style='font-weight: bold' th:text="${totalHours}"></span> hours starting from <span style='font-weight: bold' th:text="${startTime}"></span></p>
-        <p>Total cost of <span style='font-weight: bold; color: coral'>$<span th:text="${amount}"></span></span></p>
+    <p>Thank you for booking on TheBreak!<br>
+    Your booking for</p>
+    <div style='background-color: rgb(255,255,222);display: inline-block; border-radius: 4px;border-left: 4px solid #5f9ea0; padding: 8px 16px'>
+        Room: <span style='font-weight: bold' th:text="${roomTitle}"></span><br>
+        Total booking of <span style='font-weight: bold' th:text="${totalHours}"></span> hours starting from <span style='font-weight: bold' th:text="${startTime}"></span><br>
+        Total cost of <span style='font-weight: bold; color: coral'>$<span th:text="${amount}"></span></span>
     </div>
-    <p>was successful. Please proceed to payment.</p>
-    <p>Note: unpaid bookings will be cancel after 30 minutes.</p>
-    <p>Best regards,</p>
-    <p>TheBreak Team</p>
+    <p>was successful. Please proceed to payment.<br>
+    Note: unpaid bookings will be cancel after 30 minutes.</p>
+    <p>Best regards,<br>
+    TheBreak Team</p>
 </body>
 </html>
