booking reminder logic tested ok

--- a/roombooking-email/src/main/resources/templates/bookingReminderEmail.html
+++ b/roombooking-email/src/main/resources/templates/bookingReminderEmail.html
@@ -10,9 +10,9 @@
     Please get prepared for your following booking:</p>
     <div style='background-color: rgb(201,248,191); display: inline-block; border-radius: 4px; border-left: 4px solid cadetblue; padding: 8px 16px'>
         Room: <span style='font-weight: bold' th:text="${roomTitle}"></span><br>
-        Total booking of <span style='font-weight: bold' th:text="${totalHours}"></span> hours starting from <span style='font-weight: bold' th:text="${startTime}"></span>
+        Starting from <span style='font-weight: bold' th:text="${startTime}"></span>
     </div>
-    <p>You can check in ahead of the booking time.</p>
+    <br>
     <p>Best regards,<br>
     TheBreak Team</p>
 </body>
